# indico-patcher

./: .gitignore  .header.yaml  .mypy.ini  CHANGELOG.md  Makefile  README.md  TODO.md  pyproject.toml  pytest.ini  ruff.toml  tox.ini
.github/workflows/: linting.yaml  releasing.yaml  testing.yaml
doc/: README.md  classes.md  enums.md  forms.md  models.md
src/indico_patcher/: __init__.py  classes.py  enum.py  enums.py  main.py  types.py  util.py
stubs/aenum/: __init__.pyi
stubs/indico/util/enum/: __init__.pyi
tests/: conftest.py  test_classes.py  test_enum.py  test_enums.py  test_main.py  test_util.py
